Don't check for mysqlclient_r - 1) it makes no difference if we use it, 2) in it's current form it causes compilation problems on some platforms

--- a/configure.in
+++ b/configure.in
@@ -102,9 +102,8 @@ AC_CHECK_LIB(m, floor)
 AC_CHECK_LIB(dl, dlsym)
 AC_CHECK_LIB(z, compress)
 
-AC_CHECK_LIB(mysqlclient_r, main, ,
-             [AC_CHECK_LIB(mysqlclient, main, ,
-                           [AC_MSG_ERROR([Unable find a functioning MySQL library])])])
+AC_CHECK_LIB(mysqlclient, main, ,
+             [AC_MSG_ERROR([Unable find a functioning MySQL library])])
 
 AC_HEADER_STDC
 AC_CHECK_HEADER(mysql.h, , [AC_MSG_ERROR([Unable to find mysql.h])])
