Necessary updates to be compatible with code changes

--- a/sample/libnss-mysql.cfg
+++ b/sample/libnss-mysql.cfg
@@ -1,6 +1,3 @@
-[global]
-retry       5
-
 [queries]
 getpwnam    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE username='%s' LIMIT 1
 getpwuid    SELECT username,'x',uid,gid,gecos,homedir,shell FROM users WHERE uid='%u' LIMIT 1
@@ -13,25 +10,15 @@ getgrent    SELECT name,password,gid FROM groups
 memsbygid   SELECT username FROM grouplist WHERE gid='%u'
 gidsbymem   SELECT gid FROM grouplist where username='%s'
 
-[primary]
+[server]
 host        localhost
 database    auth
 username    nss-user
 password    userpass
 #socket      /var/lib/mysql/mysql.sock
+#port        3306
 ssl         0
 timeout     3
 compress    0
 #initcmd     sql-statement-here
 
-
-#[secondary]
-#host        192.168.1.2
-#database    auth
-#username    nss-user
-#password    userpass
-##port        3306
-#ssl         0
-#timeout     3
-#compress    0
-##initcmd     sql-statement-here
