--- a/Makefile.am
+++ b/Makefile.am
@@ -30,7 +30,7 @@ libnss_mysql_la_LDFLAGS = -module -version-info @LIBVER@:0:0
 noinst_HEADERS = nss_mysql.h lookup.h
 CPPFLAGS = @CPPFLAGS@ -D_REENTRANT
 EXTRA_DIST = TODO FAQ THANKS UPGRADING DEBUGGING libnss-mysql.spec \
-             sample/*.* sample/complex/*.* sample/minimal/*.*
+             sample/*.* sample/complex/*.* sample/minimal/*.* sample/README
 
 install-exec-hook:
 	-rm -f $(DESTDIR)$(libdir)/libnss_mysql.la
