+Version script for RPM spec file

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,7 @@ endif
 noinst_HEADERS = nss_mysql.h lookup.h
 CPPFLAGS = @CPPFLAGS@ -D_REENTRANT
 EXTRA_DIST = TODO FAQ THANKS UPGRADING DEBUGGING libnss-mysql.spec \
+             exports.linux \
              sample/README sample/complex/*.* sample/minimal/*.* \
              sample/linux/*.* sample/solaris/*.* sample/freebsd/*.*
 
