--- a/Makefile.am
+++ b/Makefile.am
@@ -22,20 +22,20 @@ AUTOMAKE_OPTIONS = foreign 1.6
 
 if RENAME
 lib_LTLIBRARIES         = nss_mysql.la
-nss_mysql_la_LDFLAGS    = -module -version-info @LIBVER@:0:0
+nss_mysql_la_LDFLAGS    = -module -version-info @LIBVER@:0:0 -export-symbols @OS@.sym
 nss_mysql_la_SOURCES    = version.c nss_config.c nss_main.c \
                           nss_support.c memory.c mysql.c lookup.c \
                           mysql-pwd.c mysql-spwd.c mysql-grp.c
 else
 lib_LTLIBRARIES         = libnss_mysql.la
-libnss_mysql_la_LDFLAGS = -module -version-info @LIBVER@:0:0
+libnss_mysql_la_LDFLAGS = -module -version-info @LIBVER@:0:0 -export-symbols @OS@.sym
 libnss_mysql_la_SOURCES = version.c nss_config.c nss_main.c \
                           nss_support.c memory.c mysql.c lookup.c \
                           mysql-pwd.c mysql-spwd.c mysql-grp.c
 endif
  
 noinst_HEADERS = nss_mysql.h lookup.h
-CPPFLAGS = @CPPFLAGS@ -D_REENTRANT
+CPPFLAGS += -D_REENTRANT
 EXTRA_DIST = TODO FAQ THANKS UPGRADING DEBUGGING libnss-mysql.spec \
              exports.linux \
              sample/README sample/complex/*.* sample/minimal/*.* \
