--- a/configure.in
+++ b/configure.in
@@ -34,10 +34,8 @@ AC_PROG_CC
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
-AC_ARG_WITH(mysql-inc,
-            [  --with-mysql-inc=DIR    Location of your MySQL include files])
-AC_ARG_WITH(mysql-lib,
-            [  --with-mysql-lib=DIR    Location of your MySQL libraries])
+AC_ARG_WITH(mysql,
+            [  --with-mysql=DIR        Location of your MySQL installation])
 AC_ARG_ENABLE(debug,
             [  --enable-debug          Enable debug (see DEBUGGING)],
             [AC_DEFINE([DEBUG], 1, [Enable debug])])
