--- a/sample/freebsd/libnss-mysql.cfg
+++ b/sample/freebsd/libnss-mysql.cfg
@@ -1,7 +1,7 @@
 [queries]
-getpwnam    SELECT username,password,uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE username='%s' LIMIT 1
-getpwuid    SELECT username,password,uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE uid='%u' LIMIT 1
-getpwent    SELECT username,password,uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users
+getpwnam    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE username='%s' LIMIT 1
+getpwuid    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE uid='%u' LIMIT 1
+getpwent    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users
 getgrnam    SELECT name,password,gid FROM groups WHERE name='%s' LIMIT 1
 getgrgid    SELECT name,password,gid FROM groups WHERE gid='%u' LIMIT 1
 getgrent    SELECT name,password,gid FROM groups
