Updated since files moved to src/ and aux/

--- a/.cvsignore
+++ b/.cvsignore
@@ -1,28 +1,15 @@
 Makefile
-config.cache
+aux
 config.h
+config.h.in
 config.log
 config.status
 libtool
 stamp-h
 stamp-h1
-*.o
-*.lo
-*.la
-*.so*
-.deps
-.libs
 *.gz
 autom4te*.cache
 Makefile.in
 aclocal.m4
-config.guess
-config.h.in
-config.sub
 configure
-depcomp
-install-sh
-ltmain.sh
-missing
-mkinstalldirs
-version.c
+libnss-mysql-?.?
