Move to char[] instead of *char/malloc for all config values Remove memory.c and directly call malloc/realloc/free Put MAX_LINE_SIZE back to 1024 for backward compatibility reasons

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,7 +21,7 @@
 AUTOMAKE_OPTIONS = foreign 1.6
 
 library_sources         = version.c nss_config.c nss_main.c \
-                          nss_support.c memory.c mysql.c lookup.c \
+                          nss_support.c mysql.c lookup.c \
                           mysql-pwd.c mysql-spwd.c mysql-grp.c
 library_ldflags         = -module -version-info @LIBVER@:0:0 \
                           -export-symbols $(srcdir)/@OS@.sym
