Use argument number in format string

--- a/sample/complex/libnss-mysql.cfg
+++ b/sample/complex/libnss-mysql.cfg
@@ -4,7 +4,7 @@ getpwnam    SELECT LOWER(services.username),'x',uid,gid, \
             FROM services \
             LEFT JOIN customer USING(cust_num) \
             LEFT JOIN service_defs ON services.product=service_defs.name \
-            WHERE services.username='%s' AND \
+            WHERE services.username='%1$s' AND \
                   expire > CURDATE() AND \
                   suspended='N' \
             LIMIT 1
@@ -14,13 +14,13 @@ getpwuid    SELECT LOWER(services.username),'x',uid,gid, \
             FROM services \
             LEFT JOIN customer USING(cust_num) \
             LEFT JOIN service_defs ON services.product=service_defs.name \
-            WHERE services.uid='%u' AND \
+            WHERE services.uid='%1$u' AND \
                   expire > CURDATE() AND \
                   suspended='N' \
             LIMIT 1
 getspnam    SELECT LOWER(username),password,1,0,99999,0,0,-1,0 \
             FROM services \
-            WHERE username='%s' AND \
+            WHERE username='%1$s' AND \
                   expire > CURDATE() AND \
                   suspended='N' \
             LIMIT 1
