Remove [section] identifiers Use argument number in format string Break query using new line continuation feature

--- a/sample/freebsd/libnss-mysql-root.cfg
+++ b/sample/freebsd/libnss-mysql-root.cfg
@@ -1,9 +1,17 @@
-[queries]
-getpwnam    SELECT username,password,uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE username='%s' LIMIT 1
-getpwuid    SELECT username,password,uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE uid='%u' LIMIT 1
-getpwent    SELECT username,password,uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users
+getpwnam    SELECT username,password,uid,gid,pwchange,class,gecos,homedir, \
+            shell,expire \
+            FROM users \
+            WHERE username='%1$s' \
+            LIMIT 1
+getpwuid    SELECT username,password,uid,gid,pwchange,class,gecos,homedir, \
+            shell,expire \
+            FROM users \
+            WHERE uid='%1$u' \
+            LIMIT 1
+getpwent    SELECT username,password,uid,gid,pwchange,class,gecos,homedir, \
+            shell,expire \
+            FROM users
 
-[server]
 username    nss-root
 password    rootpass
 
