--- a/sample/freebsd/libnss-mysql.cfg
+++ b/sample/freebsd/libnss-mysql.cfg
@@ -1,11 +1,32 @@
-getpwnam    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE username='%s' LIMIT 1
-getpwuid    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users WHERE uid='%u' LIMIT 1
-getpwent    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell,expire FROM users
-getgrnam    SELECT name,password,gid FROM groups WHERE name='%s' LIMIT 1
-getgrgid    SELECT name,password,gid FROM groups WHERE gid='%u' LIMIT 1
-getgrent    SELECT name,password,gid FROM groups
-memsbygid   SELECT username FROM grouplist WHERE gid='%u'
-gidsbymem   SELECT gid FROM grouplist where username='%s'
+getpwnam    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
+            expire \
+            FROM users \
+            WHERE username='%1$s' 
+            LIMIT 1
+getpwuid    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
+            expire \
+            FROM users \
+            WHERE uid='%1$u' \
+            LIMIT 1
+getpwent    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
+            expire \
+            FROM users
+getgrnam    SELECT name,password,gid \
+            FROM groups \
+            WHERE name='%1$s' \
+            LIMIT 1
+getgrgid    SELECT name,password,gid \
+            FROM groups \
+            WHERE gid='%1$u' \
+            LIMIT 1
+getgrent    SELECT name,password,gid \
+            FROM groups
+memsbygid   SELECT username \
+            FROM grouplist \
+            WHERE gid='%1$u'
+gidsbymem   SELECT gid \
+            FROM grouplist \
+            WHERE username='%1$s'
 
 host        localhost
 database    auth
