--- a/sample/minimal/libnss-mysql.cfg
+++ b/sample/minimal/libnss-mysql.cfg
@@ -1,13 +1,38 @@
-getpwnam    SELECT username,'x',uid,'5000','MySQL User',CONCAT('/home/',username),'/bin/bash' FROM users WHERE username='%s' LIMIT 1
-getpwuid    SELECT username,'x',uid,'5000','MySQL User',CONCAT('/home/',username),'/bin/bash' FROM users WHERE uid='%u' LIMIT 1
-getspnam    SELECT username,password,'1','0','99999','0','0','-1','0' FROM users WHERE username='%s' LIMIT 1
-getpwent    SELECT username,'x',uid,'5000','MySQL User',CONCAT('/home/',username),'/bin/bash' FROM users
-getspent    SELECT username,password,'1','0','99999','0','0','-1','0' FROM users
-getgrnam    SELECT name,password,gid FROM groups WHERE name='%s' LIMIT 1
-getgrgid    SELECT name,password,gid FROM groups WHERE gid='%u' LIMIT 1
-getgrent    SELECT name,password,gid FROM groups
-memsbygid   SELECT username FROM grouplist WHERE gid='%u'
-gidsbymem   SELECT gid FROM grouplist where username='%s'
+getpwnam    SELECT username,'x',uid,'5000','MySQL User', \
+                   CONCAT('/home/',username),'/bin/bash' \
+            FROM users \
+            WHERE username='%1$s' \
+            LIMIT 1
+getpwuid    SELECT username,'x',uid,'5000','MySQL User', \
+                   CONCAT('/home/',username),'/bin/bash' \
+            FROM users \
+            WHERE uid='%1$u' \
+            LIMIT 1
+getspnam    SELECT username,password,'1','0','99999','0','0','-1','0' \
+            FROM users \
+            WHERE username='%1$s' \
+            LIMIT 1
+getpwent    SELECT username,'x',uid,'5000','MySQL User', \
+                   CONCAT('/home/',username),'/bin/bash' \
+            FROM users
+getspent    SELECT username,password,'1','0','99999','0','0','-1','0' \
+            FROM users
+getgrnam    SELECT name,password,gid \
+            FROM groups \
+            WHERE name='%1$s' \
+            LIMIT 1
+getgrgid    SELECT name,password,gid \
+            FROM groups \
+            WHERE gid='%1$u' \
+            LIMIT 1
+getgrent    SELECT name,password,gid \
+            FROM groups
+memsbygid   SELECT username \
+            FROM grouplist \
+            WHERE gid='%1$u'
+gidsbymem   SELECT gid \
+            FROM grouplist \
+            WHERE username='%1$s'
 
 host        localhost
 database    auth
