Missing a '\' on getpwnam query

--- a/sample/freebsd/libnss-mysql.cfg
+++ b/sample/freebsd/libnss-mysql.cfg
@@ -1,7 +1,7 @@
 getpwnam    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
             expire \
             FROM users \
-            WHERE username='%1$s' 
+            WHERE username='%1$s' \
             LIMIT 1
 getpwuid    SELECT username,'*',uid,gid,pwchange,class,gecos,homedir,shell, \
             expire \
