--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,6 +27,7 @@ library_ldflags         = -module -version-info @LIBVER@:0:0 \
                           -export-symbols $(srcdir)/@OS@.sym
 
 lib_LTLIBRARIES         = libnss_mysql.la
+libnss_mysql_la_CFLAGS  = @MYSQL_CFLAGS@
 libnss_mysql_la_LDFLAGS = $(library_ldflags)
 libnss_mysql_la_SOURCES = $(library_sources)
  
