--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,7 +28,7 @@ library_ldflags         = -module -version-info @LIBVER@:0:0 \
 
 lib_LTLIBRARIES         = libnss_mysql.la
 libnss_mysql_la_CFLAGS  = @MYSQL_CFLAGS@
-libnss_mysql_la_LDFLAGS = $(library_ldflags)
+libnss_mysql_la_LDFLAGS = @MYSQL_LDFLAGS@ $(library_ldflags)
 libnss_mysql_la_SOURCES = $(library_sources)
  
 noinst_HEADERS = nss_mysql.h lookup.h
