Check for stdbool.h

--- a/configure.ac
+++ b/configure.ac
@@ -56,7 +56,7 @@ AC_CHECK_LIB(dl, dlsym)
 AC_CHECK_LIB(z, compress)
 
 AC_HEADER_STDC
-AC_CHECK_HEADERS(syslog.h stdint.h nss.h nss_common.h shadow.h)
+AC_CHECK_HEADERS(syslog.h stdint.h stdbool.h nss.h nss_common.h shadow.h)
 
 AC_C_CONST
 AC_TYPE_UID_T
