Get rid of rcsid variable everywhere. Properly remove version.c again, config.h contains the version generated by git-version-gen.

--- a/configure.ac
+++ b/configure.ac
@@ -69,5 +69,5 @@ AC_CHECK_TYPES([socklen_t], , , [
 #include <sys/socket.h>
 ])
 
-AC_CONFIG_FILES([Makefile src/Makefile src/version.c])
+AC_CONFIG_FILES([Makefile src/Makefile])
 AC_OUTPUT
