--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ compiler:
   - clang
   - gcc
 
-dist:
-  - xenial
-  - bionic
+jobs:
+  include:
+    - os: linux
+      dist: xenial
+    - os: linux
+      dist: bionic
 
 script: autoreconf -i -f && ./configure && make
